# ROBOTICAG12

./: .gitignore  Ejercicio9.txt  Joystick  MNIST.idsl  README.md  bridge.txt  docuNominal.txt  eclipse.desktop  lidar  methods_done  timersimple.tar.xz
actividad_1/: CMakeCache.txt  Makefile  cmake_install.cmake
actividad_1/.qt/: QtDeploySupport.cmake
actividad_1/src/: CMakeLists.txt  specificworker.cpp  specificworker.h
actividad_2/: CMakeCache.txt  CMakeLists.txt  Makefile  chocachoca.cdsl  cmake_install.cmake
actividad_2/.qt/: QtDeploySupport.cmake
actividad_2/src/: CMakeLists.txt  localiser.cdsl  specificworker.cpp  specificworker.h
actividad_2/test/: CMakeLists.txt  generatedCMakeLists.txt  specificworker.cpp  specificworker.h
actividad_3/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  organiser.cdsl
actividad_3/.qt/: QtDeploySupport.cmake
actividad_3/src/: CMakeLists.txt  mainUI (1 frame).ui  mainUI.ui.OLD  specificworker.cpp  specificworker.h
actividad_4/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  organiser.cdsl  organiser_mnist.cdsl
actividad_4/.qt/: QtDeploySupport.cmake
actividad_4/etc/: config
actividad_4/localiser/: CMakeLists.txt  Makefile  organiser.cdsl
actividad_4/localiser/etc/: config
actividad_4/localiser/src/: CMakeLists.txt  door_detector.cpp  nominal_room.h  specificworker.cpp  specificworker.h
actividad_4B/: README.md
ejemplo1/: CMakeLists.txt  Ejercicio 16.cpp  Ejercicio 17.cpp  Ejercicio15.txt  Ejercicio19.txt  counterDlg.ui  ejemplo1.cpp  ejemplo1.h  ejercicio17.cpp  ejercicio18.txt  main.cpp
(+95 files in other folders)
